Start work on c++ port

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
 *.pyc
+*.o
+configure
+Makefile
+Makefile.in
+config.h
+config.h.in
+aclocal.m4
+autom4te.cache
+config.*
+depcomp
+install-sh
+libtool
+ltmain.sh
+missing
+.deps
+stamp-h1
+downman
