--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -24,6 +24,7 @@ downman_SOURCES =                  \
     downman.cc downman.h           \
     dregex.cc dregex.h             \
     dlist.cc dlist.h               \
+    downloadlist.cc downloadlist.h \
     staginglist.cc staginglist.h   \
     download-factory.cc download-factory.h \
     download.cc download.h         \
