Create SpeedMonitor class for global speed totals and SpeedObject for per-transfer speed totals

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -23,6 +23,8 @@ downman_LDADD = $(GTK_LIBS) $(GLIB_LIBS) $(SIGC_LIBS) $(CURL_LIBS)
 downman_SOURCES =                  \
     downman.cc downman.h           \
     app-config.cc app-config.h     \
+    speed-monitor.cc speed-monitor.h \
+    speed-object.cc speed-object.h \
     utils.cc utils.h               \
     dregex.cc dregex.h             \
     dlist.cc dlist.h               \
