--- a/configure.ac
+++ b/configure.ac
@@ -20,6 +20,10 @@ PKG_CHECK_MODULES(SIGC, sigc++-2.0)
 AC_SUBST(SIGC_CFLAGS)
 AC_SUBST(SIGC_LIBS)
 
+PKG_CHECK_MODULES(LIBXML, libxml-2.0)
+AC_SUBST(LIBXML_CFLAGS)
+AC_SUBST(LIBXML_LIBS)
+
 AC_OUTPUT(
 Makefile
 src/Makefile
