Install new images with autotools

--- a/images/Makefile.am
+++ b/images/Makefile.am
@@ -1,4 +1,10 @@
 imgdir = $(pkgdatadir)/imgs
-img_DATA = downman.svg
+img_DATA = \
+    downman.svg           \
+    download-complete.svg \
+    download-go.svg       \
+    download-pause.svg    \
+    download-stop.svg     \
+    download-yield.svg
 
 EXTRA_DIST = $(img_DATA)
